knowname/knowname-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: knowname-deployment
spec:
  selector:
    matchLabels:
      app: knowname
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: knowname
    spec:
      containers:
      - name: knowname
        image: tithiwat/nginx-example
        ports:
        - containerPort: 80
