knowname/knowname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowname
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: knowname
  type: NodePort
